--- a/public/css/surveyfunnel-lite-public.css
+++ b/public/css/surveyfunnel-lite-public.css
@@ -2,7 +2,7 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
- .wpsf-sc-fullpage {
+ .surveyfunnel-lite-sc-fullpage {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -11,7 +11,7 @@
     z-index: 9999;
 }
 
-.wpsf-sc-popup {
+.surveyfunnel-lite-sc-popup {
     position: fixed;
 	top: 0;
     bottom: 0;
@@ -21,7 +21,7 @@
 	background: rgba(39,43,47,.9);
 }
 
-.wpsf-iframe {
+.surveyfunnel-lite-iframe {
 	max-width: 100% !important;
 	max-height: 100% !important;
 	width: 100% !important;
