SRF-Scoring actions and filters

--- a/admin/css/surveyfunnel-lite-admin.css
+++ b/admin/css/surveyfunnel-lite-admin.css
@@ -632,3 +632,11 @@
 .surveyfunnel-lite-tooltip:hover .surveyfunnel-lite-tooltiptext {
 	visibility: visible;
 }
+
+.tooltip-disabled .surveyfunnel-lite-tooltiptext {
+	width: max-content;
+}
+
+.tooltip-disabled a {
+	cursor: not-allowed;
+}
