added css and changes in html and webpack

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -492,7 +492,7 @@ body {
                 overflow: auto;
                 padding: 0 40px 20px 40px;
                 height: calc(100vh - 180px);
-				.modalComponentPrivacyPolicy {
+				.modalComponentPrivacyPolicy, .showScoreOnResultPage {
 					label {
 						cursor: pointer;
 						width: 50px;
