added styles for result screen modal preview

--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -22,7 +22,10 @@ body {
    
     width: calc( 100% - 30px );
     max-width: 900px;
-	opacity: 0.9;
+}
+
+.tab-list {
+	background-color: rgba(255,255,255,0.84) !important;
 }
 
 .checkbox-group, .radio-group {
