--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -945,6 +945,6 @@ body {
 	.tab-list {
 		max-height: calc(100vh - 300px);
 		overflow: auto;
-		opacity: 0.9;
+		background-color: rgba(255,255,255,0.84) !important;
 	}
 }
