--- a/src/scss/Build.scss
+++ b/src/scss/Build.scss
@@ -2,11 +2,20 @@
 	display: flex;
 
 	input {
-		margin-right: 8px;
+		margin-right: 17px;
+	}
+
+	button {
+		margin-top: 17px;
+	}
+
+	input[type=text] {
+		min-width: 180px;
 	}
 
 	input[type=number] {
 		max-width: 140px;
+		min-width: 80px;
 	}
 }
 
