--- a/public/css/surveyfunnel-lite-public.css
+++ b/public/css/surveyfunnel-lite-public.css
@@ -124,8 +124,8 @@
     height: 50px;
     width: 90px;
     border-radius: 9px!important;
-    margin-right: 10px;
-    margin-left: 10px;
+    margin-right: 10px!important;
+    margin-left: 10px!important;
     padding: 20px;
     border: 1px solid #B5C8C8;
     outline: none!important;
@@ -140,7 +140,7 @@
     width: 80px;
     border-radius: 9px!important;
     font-family: 'ApercuPro';
-    margin-right: 10px;
+    margin-right: 10px!important;
     border: 1px solid #B5C8C8!important;
     background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2212%22%20height%3D%2212%22%20viewBox%3D%220%200%2012%2012%22%3E%3Ctitle%3Edown-arrow%3C%2Ftitle%3E%3Cg%20fill%3D%22%23000000%22%3E%3Cpath%20d%3D%22M10.293%2C3.293%2C6%2C7.586%2C1.707%2C3.293A1%2C1%2C0%2C0%2C0%2C.293%2C4.707l5%2C5a1%2C1%2C0%2C0%2C0%2C1.414%2C0l5-5a1%2C1%2C0%2C1%2C0-1.414-1.414Z%22%20fill%3D%22%23000000%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fsvg%3E")!important;
     background-repeat: no-repeat!important;
