added short and long answer question

--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -74,7 +74,7 @@ body {
         }
     }
 }
-.surveyfunnel-lite-tab-CoverPage, .surveyfunnel-lite-tab-ResultScreen, .surveyfunnel-lite-tab-SingleChoice, .surveyfunnel-lite-tab-MultiChoice, .surveyfunnel-lite-tab-FormElements{
+.surveyfunnel-lite-tab-CoverPage, .surveyfunnel-lite-tab-ResultScreen, .surveyfunnel-lite-tab-SingleChoice, .surveyfunnel-lite-tab-MultiChoice, .surveyfunnel-lite-tab-FormElements, .surveyfunnel-lite-tab-ShortAnswers, .surveyfunnel-lite-tab-LongAnswers{
     border-radius: 12px;
     width: 100%;
 }
