added warning message if pro is deactivated.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -941,6 +941,13 @@ body {
 	justify-content: center;
 }
 
+.card-disabled {
+	opacity: 0.7 !important;
+	button {
+		cursor: not-allowed !important;
+	} 
+}
+
 .main-tab-container {
 	.tab-list {
 		max-height: calc(100vh - 300px);
