--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -446,7 +446,7 @@ body {
 	}
 
 	.tab-validation-error {
-		margin: 40px 0px;
+		margin: 25px 0px;
 
 		padding: 23px 33px;
 		color: #C16200;
@@ -526,7 +526,7 @@ body {
 	input[type="text"], textarea {
 		width: 100%;
 		border-radius: 9px;
-		margin: 10px 0;
+		margin: 0px 0px 10px 0px;
 		word-break: break-word;
 		outline: none;
 		padding: 20px;
@@ -539,4 +539,9 @@ body {
 	textarea {
 		min-height: 100px;
 	}
+}
+
+.modalComponentError {
+	margin: 10px 0px;
+	color: #f44336;
 }
