--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -545,3 +545,61 @@ body {
 	margin: 10px 0px;
 	color: #f44336;
 }
+
+.imageAnswerFlexBox {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.surveyfunnel-lite-tab-imageanswer-container {
+	display: block;
+	margin-right: 20px;
+	margin-bottom: 20px;
+
+	border-radius: 12px;
+	overflow: hidden;
+	font-size: 12px;
+	background: #F0F2F5;
+
+	box-shadow: 0px 4px 1px rgba(0,0,0, 0.04);
+
+	input[type="radio"]{
+		display:none;
+	}
+
+	label {
+		white-space: nowrap;
+		width: 100%;
+		height: 100%;
+	}
+
+	input[type="radio"] + div {
+		
+		cursor:pointer;
+		max-width: 160px;
+	}
+
+	input[type="radio"]:checked + div {
+		outline: 10px solid #f00;
+	}
+
+	.image-answer {
+		position: relative;
+		font-size: 0;
+		img {
+			border-radius: 3px;
+			transition: all .2s ease-in-out;
+			width: 160px;
+			height: 100px;
+		}
+	}
+
+	.imageAnswerName {
+		padding: 10px 12px;
+		word-break: break-word;
+	}
+}
+
+.active {
+	opacity: 0.5;
+}
