--- a/src/scss/configure1.scss
+++ b/src/scss/configure1.scss
@@ -280,6 +280,9 @@
                 }
                 .zapierSteps{
                     margin: 44px 0 0 44px;
+                    ol{
+                      line-height: 30px;
+                    }
                     .contentTypesLabel{
                         h3{
                             margin:0;
