new update from windows

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1054,3 +1054,11 @@ body {
 		width: 50px;
 	}
 }
+.modalContent-right-content{
+    padding: 20px;
+    .surveyfunnel-lite-dropboard{
+        padding: 10px;
+        margin: 10px;
+        border-radius: 10px;
+    }
+}
