--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1076,3 +1076,42 @@ body {
         border-radius: 10px;
     }
 }
+.showBoard-outcome{
+    display: flex;
+    .cardBox-outcome{
+        height:75px;
+        width: 75px;
+        margin:0px 10px 5px 10px;
+        position: relative;
+        display: inline-block;
+        align-items: center;
+        border-radius: 5px;
+        background-color: white;
+        padding: 20px;
+        .cardBox-btn-outcome{
+            position:absolute;
+            top:2px;
+            z-index: 2;
+            right: 3px;
+            border:none;
+            background-color: transparent;
+        }
+        p{
+            height: 100%;
+            font-size: 25px;
+            position: relative;
+            top: 0;
+            right: 0;
+            left: 0;
+            margin: 0;
+            text-align:center;
+        }
+    }
+}
+.outcome-dropboard{
+    padding:10px;
+    border-radius: 10px;
+    margin:10px 10px 20px 10px;
+	box-shadow: 0px 0px 4px 4px rgb(0 0 0 / 20%);
+
+}
