update connected answers

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1088,6 +1088,7 @@ body {
         border-radius: 5px;
         background-color: white;
         padding: 20px;
+        border:1px solid black;
         .cardBox-btn-outcome{
             position:absolute;
             top:2px;
